crates/datarig-tui/tests/snapshots/ui_snapshots__grid_key_marks_text_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: default│"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ analytics       ││  2▎SELECT * FROM shop.users WHERE id <= 8;           │"
"│    ▸ public          ││  3                                                   │"
"│    ▸ shop            ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│                      ││  6 JOIN shop.users u ON u.id = o.user_id             │"
"│                      │╰──────────────────────────────────────────────────────╯"
"│                      │╭ Results · 3 rows ────────────────────────────────────╮"
"│                      ││   │ PK id │ FK user_id │ UQ email           │ name   │"
"│                      ││   │ int8  │ int8       │ text               │ text   │"
"│                      ││ 1 │     1 │          1 │ user01@example.com │ ユーザ…│" Hidden by multi-width symbols: [(73, " "), (75, " "), (77, " ")]
"│                      ││ 2 │     2 │          1 │ user02@example.com │ ユーザ…│" Hidden by multi-width symbols: [(73, " "), (75, " "), (77, " ")]
"│                      ││ 3 │     3 │          1 │ user03@example.com │ ユーザ…│" Hidden by multi-width symbols: [(73, " "), (75, " "), (77, " ")]
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 3 rows · 3ms         │ Enter view cell EN "
