crates/datarig-tui/tests/snapshots/ui_snapshots__help_editor_normal_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Keys — Editor (vim Normal) ──────────────────────────────────────────────╮─╮"
"│▾│ / search all keys · Esc close                                            │t│"
"│ │──────────────────────────────────────────────────────────────────────────│e│"
"│ │   Edit this tab's connection profile      Space c e                      │ │"
"│ │   Test this tab's connection              Space c t                      │ │"
"│ │   Disconnect this tab's connection        Space c x                      │ │"
"│ │   Reconnect this tab's connection         Space c r                      │ │"
"│ │   Change this tab's connection            Space c s                      │ │"
"│ │   Choose this tab's database and schema   Space c d                      │ │"
"│ │   Save query                              Space s s                      │ │"
"│ │   Save query as…                          Space s a                      │ │"
"│ │   Rename this saved query                 Space s r                      │ │"
"│ │   Open a saved query                      Space s o                      │t│"
"│ │   Delete this saved query                 Space s d                      │ │"
"│ │   Format the statement under the cursor … Space e f                      │ │"
"│ │   Comment the line or the selected lines… Space e c                      │ │"
"│ │   Explain: the statement's plan (nothing… Space e x                      │t│"
"│ │   Explain analyze: run and measure the s… Space e a                      │ │"
"│ │   Action menu                             Space Space / Shift+F10 / Menu │ │"
"│ │   Tab menu                                Space t m                      │ │"
"│ ╰─────────────────── ↑↓ move · Enter run/open · l/h open/close · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
